<resources>
    <string name="app_name">Login &amp; Register</string>
    <string name="title_activity_forgot_password">forgotPasswordActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_home__nav_view">HomeActivity_NavView</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_web">Web</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_inventory">Your inventory</string>
    <string name="menu_forum">Forum</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_logOut">Log Out</string>
</resources>